--- a/.github/workflows/main_comp-dist-webapp.yml
+++ b/.github/workflows/main_comp-dist-webapp.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: .
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
