--- a/.github/workflows/main_comp-dist-webapp.yml
+++ b/.github/workflows/main_comp-dist-webapp.yml
@@ -13,12 +13,12 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read 
 
     steps:
       - uses: actions/checkout@v4
         with:
-          path: .
+          path: .  
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
@@ -30,8 +30,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-        working-directory: ./comp-dist-auth-api
-      
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
