--- a/.github/workflows/main_comp-dist-webapp.yml
+++ b/.github/workflows/main_comp-dist-webapp.yml
@@ -30,10 +30,11 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
-        with:
+        with: 
           name: node-app
           path: .
 
