fixing web.config and yaml

--- a/.github/workflows/main_comp-dist-webapp.yml
+++ b/.github/workflows/main_comp-dist-webapp.yml
@@ -27,7 +27,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: |
+            src
+            web.config
+            package.json
+            package-lock.json
+            .env
+
 
   deploy:
     runs-on: ubuntu-latest
