--- a/web.config
+++ b/web.config
@@ -2,24 +2,21 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="src/server.js" verb="*" modules="iisnode"/>
+        <add name="iisnode" path="src/server.js" verb="*" modules="iisnode"/>
     </handlers>
+
     <rewrite>
-      <rules>
-        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^src/server.js\/debug[\/]?" />
-        </rule>
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}"/>
-        </rule>
+    <rules>
         <rule name="DynamicContent">
-          <conditions>
+        <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
-          </conditions>
-          <action type="Rewrite" url="src/server.js"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="True"/>
+        </conditions>
+        <action type="Rewrite" url="src/server.js"/>
         </rule>
-      </rules>
+    </rules>
     </rewrite>
+
     <defaultDocument enabled="false" />
     <directoryBrowse enabled="false" />
   </system.webServer>
