--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "comp-dist-auth-api",
   "version": "1.0.0",
   "description": "Basic authentication API using NodeJS for college project.",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/server.js"
