tried to change yamln path

--- a/.github/workflows/main_comp-dist-webapp.yml
+++ b/.github/workflows/main_comp-dist-webapp.yml
@@ -27,13 +27,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: |
-            src
-            web.config
-            package.json
-            package-lock.json
-            .env
-
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
